--- a/exercises/bootstrap/pikachu.html
+++ b/exercises/bootstrap/pikachu.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
     <!-- Bootstrap CSS -->
     <link
@@ -16,31 +16,31 @@
 </head>
 
 <body>
-<div>
+<div class="container mb-2">
     <h1>Ćwiczenie z Pikachu</h1>
 </div>
 
-<div>
-    <div>
-        <div>
-            <img
-                    src="https://pixy.org/src/108/1088380.png"
-                    alt="Siedzący Pikachu"
-                    title="https://pixy.org/src/108/1088380.png"
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-3 ">
+            <img alt="Siedzący Pikachu"
+                 class="img-fluid img-thumbnail"
+                 src="https://pixy.org/src/108/1088380.png"
+                 title="https://pixy.org/src/108/1088380.png"
             />
         </div>
-        <div>
+        <div class="col-12 col-md-6 col-lg-3 mt-lg-0 mt-md-0 mt-4">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
             consectetur orci quam, sed fringilla felis congue eu. Donec nibh dui,
             ullamcorper a facilisis quis, cursus ut odio.
         </div>
-        <div>
+        <div class="col-12 col-md-6 col-lg-3 mt-lg-0 mt-md-4 mt-4">
             Morbi nisi dolor, varius et sodales mattis, ornare at diam. Curabitur
             sed justo orci. Vivamus convallis laoreet consequat. Etiam fermentum
             augue a molestie vulputate. Fusce id posuere ipsum. In consectetur
             lacus dolor, sed ornare neque aliquam a.
         </div>
-        <div>
+        <div class="col-12 col-md-6 col-lg-3 mt-lg-0 mt-md-4 mt-4">
             Donec quis leo eu erat placerat ornare. In erat orci, porttitor vel
             justo non, convallis vehicula lectus. Nullam in ullamcorper quam.
             Suspendisse a quam mattis, egestas nibh ut, convallis augue.
