--- a/exercises/bootstrap/advanced-form.html
+++ b/exercises/bootstrap/advanced-form.html
@@ -19,32 +19,41 @@
 <div class="container">
     <h1>Dość złożony formularz</h1>
 
-    <form>
+    <form class="needs-validation" novalidate>
         <div class="row mt-3">
             <div class="col-md-6">
                 <label class="form-label" for="input-name"> Imię </label>
 
-                <input class="form-control" id="input-name" placeholder="Jan" type="text"/>
+                <input class="form-control" id="input-name" placeholder="Jan" required type="text"/>
+
+                <div class="invalid-feedback">Podaj imię.</div>
             </div>
 
-            <div class="col-md-6">
-                <label class="form-label" for="input-surname"> Nazwisko </label>
+            <div class="col-md-6 mt-3 mt-sm-0">
+                <label class="form-label  " for="input-surname"> Nazwisko </label>
 
-                <input class="form-control" id="input-surname" placeholder="Kowalski" type="text"/>
+                <input class="form-control" id="input-surname" placeholder="Kowalski" required type="text"/>
+
+                <div class="invalid-feedback">Podaj nazwisko.</div>
             </div>
         </div>
 
         <div class="mt-3">
             <label class="form-label" for="input-email"> Email </label>
 
-            <input class="form-control" id="input-email" type="email"/>
+            <input class="form-control" id="input-email" required type="email"/>
+
+            <div class="invalid-feedback">Podaj poprawny adres e-mail.</div>
         </div>
 
         <div class="mt-3">
             <label class="form-label" for="input-password"> Hasło </label>
 
-            <input class="form-control" id="input-password" minlength="8" type="password"/>
+            <input class="form-control" id="input-password" minlength="8" required type="password"/>
             <div class="form-text" id="password-help">Hasło musi się składać z conajmniej 8 znaków.</div>
+
+            <div class="invalid-feedback">Podaj hasło składające się z co najmniej 8 znaków.</div>
+
         </div>
 
         <div class="mt-3">
@@ -61,31 +70,40 @@
                            class="form-control"
                            id="input-postal-code-first-part"
                            placeholder="00"
-                           type="number"/>
+                           required
+                           type="number"
+                    />
                     <span class="input-group-text" id="basic-mark">-</span>
                     <input aria-describedby="basic-mark"
                            aria-label="000"
                            class="form-control"
                            id="input-postal-code-second-part"
                            placeholder="000"
-                           type="number"/>
+                           required
+                           type="number"
+                    />
                 </div>
 
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6  mt-3 mt-sm-0">
                 <label class="form-label" for="input-city"> Miejscowość </label>
 
                 <input class="form-control" id="input-city" placeholder="Gdańsk" required type="text"/>
+
+                <div class="invalid-feedback">Podaj miejscowosść.</div>
             </div>
         </div>
 
 
         <div class="mt-3">
             <div class="form-check">
-                <input class="form-check-input" id="check-terms" type="checkbox"/>
+                <input class="form-check-input" id="check-terms" required type="checkbox"/>
 
                 <label class="form-check-label" for="check-terms"> Akceptuję regulamin </label>
+
+                <div class="invalid-feedback">Zaakceptuj regulamin, żeby się zarejestrować.</div>
+
             </div>
         </div>
 
